# calculator-cli

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
src/: main.rs
src/cli/: mod.rs
src/operations/: mod.rs
src/utils/: mod.rs
